<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.setu.assignment1.activities.ClothActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:hint="@string/select"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        >
        <AutoCompleteTextView
            android:id="@+id/auto_complete_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/black" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        </androidx.core.widget.NestedScrollView>

    </com.google.android.material.textfield.TextInputLayout>









    <!-- AppBar with Toolbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        app:elevation="0dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Scrollable content -->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <EditText
            android:id="@+id/clothTitle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/hint_clothTitle"
            android:inputType="text"
            android:maxLength="25"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/hint_clothDescription"
            android:inputType="text"
            android:maxLength="25"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:padding="8dp"
            android:text="@string/button_addCloth"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/clothImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@mipmap/ic_launcher"
            tools:ignore="ImageContrastCheck" />

        <Button
            android:id="@+id/chooseImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:importantForAccessibility="no"
            android:padding="8dp"
            android:text="@string/button_addImage_cloth"
            android:textColor="@color/cardview_shadow_start_color"
            android:textSize="16sp"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
